# genprot

./: .gitignore  README.md  pyproject.toml  setup.cfg
data/datasets/anti/: test.fasta
data/interpro/: Dockerfile  README.md  inter.py  script.sh
hmmer/: Dockerfile  app.py  requirements.txt
igFold/: Dockerfile  README.md  app.py
output/generated_sequences/: msavae_samples.fa
output/logs/: vae.csv
scripts/: generate_from_prior.py  generate_variants.py  optimize.py  out.txt  train_msa.py  train_raw.py
src/genprot/models/: __init__.py
src/genprot/models/VAE/: model.py
src/genprot/models/gVAE/: decoders.py  encoders.py  layers.py  protcnn.py  vaes.py
src/genprot/optimization/: __init__.py  ea.py  evaluation.py  hmm.py  problem.py
src/genprot/optimization/inspyred/: ea.py  observers.py
src/genprot/optimization/jmetal/: ea.py  generators.py  observers.py  operators.py  problem.py  terminators.py
src/genprot/remote/: __init__.py  hmm.py  igfold.py
src/genprot/utils/: alphabet.py  convert_to_fasta.py  data_loaders.py  decoding.py  fasta.py  io.py  process.py
