[bumpversion]
current_version = 0.0.1
commit = True
tag = False

[metadata]
name = genprot
version = 0.0.1 
description = EA/ML protein generation
author = Vitor Pereira
license = GNUv3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = 
	genprot
install_requires = 
	requests>=2
python_requires = >=3.6
package_dir = 
	=src
zip_safe = no

[options.extras_require]
testing = 
	pytest>=6.0
	pytest-cov>=2.0
	flake8>=3.9
	tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160

[bumpversion:file:src/genprot/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}
